@@ -1,11 +1,11 @@
 package core.apis.last.queues;
 
 import core.apis.discogs.DiscogsApi;
-import core.apis.last.chartentities.UrlCapsule;
+import core.apis.last.entities.chartentities.UrlCapsule;
 import core.apis.spotify.Spotify;
 import dao.ChuuService;
-import org.jetbrains.annotations.NotNull;
 
+import javax.annotation.Nonnull;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -14,7 +14,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public abstract class GroupingQueue extends ArtistQueue {
     public final int requested;
@@ -42,7 +41,7 @@ public abstract class GroupingQueue extends ArtistQueue {
     }
 
     @Override
-    public boolean offer(@NotNull UrlCapsule item) {
+    public boolean offer(@Nonnull UrlCapsule item) {
         artistMap.merge(mappingFunction().apply(item), item, reductorFunction());
         return true;
     }
@@ -53,7 +52,7 @@ public abstract class GroupingQueue extends ArtistQueue {
                     int i = counter.getAndIncrement();
                     urlCapsule.setPos(i);
                     return i < requested;
-                }).collect(Collectors.toList());
+                }).toList();
         collected.forEach(t -> wrapper.offer(CompletableFuture.supplyAsync(() ->
         {
             getUrl(t);
