@@ -25,7 +25,6 @@ import java.awt.image.BufferedImage;
 import java.awt.image.DataBufferByte;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ColorThiefCustom {
     private static final int DEFAULT_QUALITY = 10;
@@ -82,8 +81,8 @@ public class ColorThiefCustom {
             return Pair.of(null, cmap.getRight());
         }
         int[][] palette = cmap.getKey().palette();
-        List<Color> collect = Arrays.stream(palette).map(ints -> new Color(Math.min(255, ints[0]), Math.min(255, ints[1]), Math.min(255, ints[2]))).collect(Collectors.toList());
-        return Pair.of(collect, cmap.getRight());
+        List<Color> truncedPalette = Arrays.stream(palette).map(ints -> new Color(Math.min(255, ints[0]), Math.min(255, ints[1]), Math.min(255, ints[2]))).toList();
+        return Pair.of(truncedPalette, cmap.getRight());
     }
 
     /**
@@ -109,16 +108,10 @@ public class ColorThiefCustom {
             throw new IllegalArgumentException("Specified quality should be greater then 0.");
         }
 
-        Pair<int[][], Color> returnValue;
-        switch (sourceImage.getType()) {
-            case BufferedImage.TYPE_3BYTE_BGR:
-            case BufferedImage.TYPE_4BYTE_ABGR:
-                returnValue = getPixelsFast(sourceImage, quality, ignoreWhite);
-                break;
-
-            default:
-                returnValue = getPixelsSlow(sourceImage, quality, ignoreWhite);
-        }
+        Pair<int[][], Color> returnValue = switch (sourceImage.getType()) {
+            case BufferedImage.TYPE_3BYTE_BGR, BufferedImage.TYPE_4BYTE_ABGR -> getPixelsFast(sourceImage, quality, ignoreWhite);
+            default -> getPixelsSlow(sourceImage, quality, ignoreWhite);
+        };
 
         // Send array to quantize function which clusters values using median cut algorithm
         return Pair.of(MMCQ.quantize(returnValue.getLeft(), colorCount), returnValue.getRight());
@@ -134,24 +127,17 @@ public class ColorThiefCustom {
 
         int colorDepth;
         int type = sourceImage.getType();
-        switch (type) {
-            case BufferedImage.TYPE_3BYTE_BGR:
-                colorDepth = 3;
-                break;
-
-            case BufferedImage.TYPE_4BYTE_ABGR:
-                colorDepth = 4;
-                break;
-
-            default:
-                throw new IllegalArgumentException("Unhandled type: " + type);
-        }
+        colorDepth = switch (type) {
+            case BufferedImage.TYPE_3BYTE_BGR -> 3;
+            case BufferedImage.TYPE_4BYTE_ABGR -> 4;
+            default -> throw new IllegalArgumentException("Unhandled type: " + type);
+        };
 
         int expectedDataLength = pixelCount * colorDepth;
         if (expectedDataLength != pixels.length) {
             throw new IllegalArgumentException(
                     "(expectedDataLength = " + expectedDataLength + ") != (pixels.length = "
-                            + pixels.length + ")");
+                    + pixels.length + ")");
         }
 
         // Store the RGB values in an array format suitable for quantize function
