@@ -1,24 +1,24 @@
 package core.scheduledtasks;
 
 import core.Chuu;
-import core.apis.discogs.DiscogsApi;
-import core.apis.discogs.DiscogsSingleton;
 import core.apis.last.ConcurrentLastFM;
 import core.apis.last.LastFMFactory;
-import core.apis.spotify.Spotify;
-import core.apis.spotify.SpotifySingleton;
-import core.commands.CommandUtil;
 import core.exceptions.LastFMNoPlaysException;
 import core.exceptions.LastFmEntityNotFoundException;
+import core.exceptions.UnknownLastFmException;
+import core.parsers.utils.CustomTimeFrame;
+import core.services.UpdaterHoarder;
 import core.services.UpdaterService;
 import dao.ChuuService;
 import dao.entities.*;
 
 import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Random;
+
+import static core.exceptions.UnknownLastFmException.AUTHENTICATOIN_FAILED;
 
 /**
  * Thread that is the core of the application
@@ -28,40 +28,40 @@ public class UpdaterThread implements Runnable {
 
     private final ChuuService dao;
     private final ConcurrentLastFM lastFM;
-    private final Spotify spotify;
     private final boolean isIncremental;
-    private final DiscogsApi discogsApi;
     private final Random r = new Random();
 
 
     public UpdaterThread(ChuuService dao, boolean isIncremental) {
         this.dao = dao;
         lastFM = LastFMFactory.getNewInstance();
-        spotify = SpotifySingleton.getInstance();
-        discogsApi = DiscogsSingleton.getInstanceUsingDoubleLocking();
         this.isIncremental = isIncremental;
     }
 
     public static List<ScrobbledArtist> groupAlbumsToArtist(List<ScrobbledAlbum> scrobbledAlbums) {
         Map<ScrobbledArtist, Integer> a = new HashMap<>();
         for (ScrobbledArtist x : scrobbledAlbums) {
-            a.merge(new ScrobbledArtist(x.getArtist(), 0, null), x.getCount(), Integer::sum);
+            ScrobbledArtist key = new ScrobbledArtist(x.getArtist(), 0, null);
+            key.setArtistId(x.getArtistId());
+            a.merge(key, x.getCount(), Integer::sum);
         }
         return a.entrySet().stream().map(x -> {
             ScrobbledArtist key = x.getKey();
             key.setCount(x.getValue());
             return key;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @Override
     public void run() {
         try {
-            System.out.println("THREAD WORKING ) + " + LocalDateTime.now().toString());
+
             UpdaterUserWrapper userWork;
 
             float chance = r.nextFloat();
             userWork = dao.getLessUpdated();
+            assert userWork != null;
+            Chuu.getLogger().info("Starting update thread on {}  |  control: {} | lastUpdate: {}", userWork.getLastFMName(), userWork.getTimestampControl(), userWork.getTimestamp());
             boolean removeFlag = true;
             try {
                 if (!UpdaterService.lockAndContinue(userWork.getLastFMName())) {
@@ -72,69 +72,46 @@ public class UpdaterThread implements Runnable {
 
                 String lastFMName = userWork.getLastFMName();
                 try {
-                    if (isIncremental && chance <= 0.95f) {
+                    if (isIncremental && chance <= 0.995f) {
+                        UpdaterHoarder updaterHoarder = new UpdaterHoarder(userWork, dao, lastFM, dao.findLastFMData(userWork.getDiscordID()));
+                        int i = updaterHoarder.updateUser();
 
-                        TimestampWrapper<List<ScrobbledAlbum>> albumDataList = lastFM
-                                .getNewWhole(lastFMName,
-                                        userWork.getTimestamp());
-
-
-                        // Correction with current last fm implementation should return the same name so
-                        // no correction gives
-                        List<ScrobbledAlbum> albumData = albumDataList.getWrapped();
-                        List<ScrobbledArtist> artistData = groupAlbumsToArtist(albumData);
-                        albumData = albumData.stream().filter(x -> x != null && !x.getAlbum().isBlank()).collect(Collectors.toList());
-                        Map<String, ScrobbledArtist> changedName = new HashMap<>();
-                        for (Iterator<ScrobbledArtist> iterator = artistData.iterator(); iterator.hasNext(); ) {
-                            ScrobbledArtist datum = iterator.next();
-                            try {
-                                String artist = datum.getArtist();
-                                CommandUtil.validate(dao, datum, lastFM, discogsApi, spotify);
-                                String newArtist = datum.getArtist();
-                                if (!artist.equals(newArtist)) {
-                                    ScrobbledArtist e = new ScrobbledArtist(newArtist, 0, null);
-                                    e.setArtistId(datum.getArtistId());
-                                    changedName.put(artist, e);
-                                }
-                            } catch (LastFmEntityNotFoundException ex) {
-                                Chuu.getLogger().error("WTF ARTIST DELETED" + datum.getArtist());
-                                iterator.remove();
-                            }
-                        }
-
-                        albumData.forEach(x -> {
-                            ScrobbledArtist scrobbledArtist = changedName.get(x.getArtist());
-                            if (scrobbledArtist != null) {
-                                x.setArtist(scrobbledArtist.getArtist());
-                                x.setArtistId(scrobbledArtist.getArtistId());
-                            }
-                        });
-
-                        dao.incrementalUpdate(new TimestampWrapper<>(artistData, albumDataList.getTimestamp()), lastFMName, albumData);
-
-                        System.out.println("Updated Info Incrementally of " + lastFMName
-                                + LocalDateTime.now().format(DateTimeFormatter.ISO_DATE));
-                        System.out.println(" Number of rows updated :" + albumData.size());
-
+                        Chuu.getLogger().info("Finished update on {} | items: {} ", userWork.getLastFMName(), i);
                     } else {
+                        Chuu.getLogger().info("Doing full update on thread ");
 
-                        List<ScrobbledArtist> artistData = lastFM.getAllArtists(lastFMName, TimeFrameEnum.ALL.toApiFormat());
+                        List<ScrobbledArtist> artistData = lastFM.getAllArtists(LastFMData.ofUserWrapper(userWork), CustomTimeFrame.ofTimeFrameEnum(TimeFrameEnum.ALL));
                         dao.insertArtistDataList(artistData, lastFMName);
-                        System.out.println(" Updated  ) " + lastFMName + " artists");
 
-                        List<ScrobbledAlbum> albumData = lastFM.getAllAlbums(lastFMName, TimeFrameEnum.ALL.toApiFormat());
+                        List<ScrobbledAlbum> albumData = lastFM.getAllAlbums(LastFMData.ofUserWrapper(userWork), CustomTimeFrame.ofTimeFrameEnum(TimeFrameEnum.ALL));
                         dao.albumUpdate(albumData, artistData, lastFMName);
-                        System.out.println(" Updated  ) " + lastFMName + " albums");
-
+                        List<ScrobbledTrack> trackData = lastFM.getAllTracks(LastFMData.ofUserWrapper(userWork), CustomTimeFrame.ofTimeFrameEnum(TimeFrameEnum.ALL));
+                        dao.trackUpdate(trackData, artistData, lastFMName);
+                        Chuu.getLogger().info("Finished full update on {}  ", userWork.getLastFMName());
                     }
                 } catch (LastFMNoPlaysException e) {
                     // dao.updateUserControlTimestamp(userWork.getLastFMName(),userWork.getTimestampControl());
                     dao.updateUserTimeStamp(lastFMName, userWork.getTimestamp(),
                             (int) (Instant.now().getEpochSecond() + 4000));
-                    System.out.println("No plays " + lastFMName
-                            + LocalDateTime.now().format(DateTimeFormatter.ISO_DATE));
+                    Chuu.getLogger().info("Updating an user with no plays: {} ", userWork.getLastFMName());
                 } catch (LastFmEntityNotFoundException e) {
                     dao.removeUserCompletely(userWork.getDiscordID());
+                } catch (UnknownLastFmException ex) {
+                    int code = ex.getCode();
+                    switch (code) {
+                        case 17 -> {
+                            dao.updateUserTimeStamp(lastFMName, userWork.getTimestamp(),
+                                    (int) (Instant.now().getEpochSecond() + 10000));
+                            Chuu.getLogger().warn("User {} code 17 while updating ", lastFMName);
+                        }
+                        case AUTHENTICATOIN_FAILED -> {
+                            dao.clearSess(lastFMName);
+                            dao.updateUserTimeStamp(lastFMName, userWork.getTimestamp(),
+                                    (int) (Instant.now().getEpochSecond() + 1000));
+                            Chuu.getLogger().warn("Cleared session for {} ", lastFMName);
+                        }
+                        default -> Chuu.getLogger().warn("Error while updating {} , Unknown code {} ", lastFMName, code, ex);
+                    }
                 }
             } finally {
                 if (removeFlag) {
@@ -142,8 +119,7 @@ public class UpdaterThread implements Runnable {
                 }
             }
         } catch (Throwable e) {
-            System.out.println("Error while updating" + LocalDateTime.now().format(DateTimeFormatter.ISO_DATE));
-            Chuu.getLogger().warn(e.getMessage(), e);
+            Chuu.getLogger().warn("Error while updating thread: {}", e.getMessage(), e);
         }
 
     }
