@@ -5,17 +5,21 @@ import core.apis.discogs.DiscogsSingleton;
 import core.apis.last.ConcurrentLastFM;
 import core.apis.spotify.Spotify;
 import core.apis.spotify.SpotifySingleton;
-import core.commands.CommandUtil;
+import core.commands.utils.CommandUtil;
+import core.exceptions.LastFmEntityNotFoundException;
 import core.exceptions.LastFmException;
 import dao.ChuuService;
 import dao.entities.*;
+import dao.exceptions.InstanceNotFoundException;
 
 import java.sql.Date;
-import java.time.*;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.ConcurrentSkipListSet;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class BillboardHoarder {
@@ -29,14 +33,6 @@ public class BillboardHoarder {
     private final ConcurrentLastFM lastFM;
     private final int weekId;
     private final Map<String, Long> dbIdMap = new HashMap<>();
-    private final java.util.function.Function<TimeZone, Function<LocalDate, ZoneOffset>> phaserBuilder = (t) -> (LocalDate l) -> {
-        try {
-            return ZoneOffset.ofTotalSeconds(t.getOffset(l.getEra().getValue(), l.getYear(), l.getMonth().getValue(), l.getDayOfMonth(), l.getDayOfWeek().getValue(), 0) / 1000);
-        } catch (DateTimeException ex) {
-            System.out.println("asodjua");
-        }
-        return null;
-    };
 
 
     public BillboardHoarder(List<UsersWrapper> users, ChuuService service, Week week, ConcurrentLastFM lastFM) {
@@ -46,7 +42,6 @@ public class BillboardHoarder {
         this.lastFM = lastFM;
         spotify = SpotifySingleton.getInstance();
         discogsApi = DiscogsSingleton.getInstanceUsingDoubleLocking();
-
         this.service = service;
     }
 
@@ -56,23 +51,21 @@ public class BillboardHoarder {
         Date weekStart = week.getWeekStart();
         LocalDate l = weekStart.toLocalDate();
         LocalDateTime weekBeginning = l.minus(1, ChronoUnit.WEEKS).atStartOfDay();
-        users.parallelStream()
-                .filter(usersWrapper -> !usersBeingProcessed.contains(usersWrapper.getDiscordID()))
-                .filter(usersWrapper -> service.getUserData(weekId, usersWrapper.getLastFMName()).isEmpty())
+        users
                 .forEach(usersWrapper -> {
                     try {
-                        usersBeingProcessed.add(usersWrapper.getDiscordID());
-                        String lastFMName = usersWrapper.getLastFMName();
-                        TimeZone t = usersWrapper.getTimeZone();
-                        List<TrackWithArtistId> tracksAndTimestamps = lastFM.getWeeklyBillboard(lastFMName,
-                                (int) OffsetDateTime.of(weekBeginning, ZoneOffset.ofTotalSeconds(usersWrapper.getTimeZone().getOffset(Calendar.getInstance().getTimeInMillis()) / 1000)).toInstant().getEpochSecond()
-                                , (int) OffsetDateTime.of(weekStart.toLocalDate().atStartOfDay(), ZoneOffset.ofTotalSeconds(usersWrapper.getTimeZone().getOffset(Calendar.getInstance().getTimeInMillis()) / 1000)).toInstant().getEpochSecond()
-                        );
-                        doArtistValidation(tracksAndTimestamps);
-                        service.insertUserData(weekId, lastFMName, tracksAndTimestamps);
+                        if (!usersBeingProcessed.contains(usersWrapper.getDiscordID())) {
+                            int untilToCalculate = (int) OffsetDateTime.of(weekStart.toLocalDate().atStartOfDay(), ZoneOffset.ofTotalSeconds(usersWrapper.getTimeZone().getOffset(Calendar.getInstance().getTimeInMillis()) / 1000)).toInstant().getEpochSecond();
+                            if (usersWrapper.getTimestamp() < untilToCalculate) {
+                                usersBeingProcessed.add(usersWrapper.getDiscordID());
+                                UpdaterHoarder updaterHoarder = new UpdaterHoarder(usersWrapper, service, lastFM, service.findLastFMData(usersWrapper.getDiscordID()));
+                                updaterHoarder.updateUser();
+                            }
+                        }
 
-                    } catch (LastFmException ignored) {
+                    } catch (LastFmException | InstanceNotFoundException ignored) {
                     } finally {
+                        service.prepareBillboardWeek(usersWrapper.getLastFMName(), weekId);
                         usersBeingProcessed.remove(usersWrapper.getDiscordID());
                     }
                 });
@@ -80,18 +73,18 @@ public class BillboardHoarder {
     }
 
     private void doArtistValidation(List<TrackWithArtistId> toValidate) {
-        toValidate = toValidate.stream().peek(x -> {
+        List<TrackWithArtistId> newToValidate = toValidate.stream().peek(x -> {
             Long aLong1 = dbIdMap.get(x.getArtist());
             if (aLong1 != null)
                 x.setArtistId(aLong1);
-        }).filter(x -> x.getArtistId() == -1L || x.getArtistId() == 0L).collect(Collectors.toList());
+        }).filter(x -> x.getArtistId() == -1L || x.getArtistId() == 0L).toList();
         Set<String> tobeRemoved = new HashSet<>();
-        List<ScrobbledArtist> artists = toValidate.stream().map(Track::getArtist).distinct().map(x -> new ScrobbledArtist(x, 0, null)).collect(Collectors.toList());
+        List<ScrobbledArtist> artists = newToValidate.stream().map(Track::getArtist).distinct().map(x -> new ScrobbledArtist(x, 0, null)).toList();
         service.filldArtistIds(artists);
-        Map<Boolean, List<ScrobbledArtist>> collect1 = artists.stream().collect(Collectors.partitioningBy(x -> x.getArtistId() != -1L && x.getArtistId() != 0));
-        List<ScrobbledArtist> foundArtists = collect1.get(true);
+        Map<Boolean, List<ScrobbledArtist>> mappedByExistingId = artists.stream().collect(Collectors.partitioningBy(x -> x.getArtistId() != -1L && x.getArtistId() != 0));
+        List<ScrobbledArtist> foundArtists = mappedByExistingId.get(true);
         Map<String, String> changedUserNames = new HashMap<>();
-        collect1.get(false).stream().map(x -> {
+        mappedByExistingId.get(false).stream().map(x -> {
             try {
                 String artist = x.getArtist();
                 CommandUtil.validate(service, x, lastFM, discogsApi, spotify);
@@ -99,6 +92,9 @@ public class BillboardHoarder {
                 if (!Objects.equals(artist, newArtist)) {
                     changedUserNames.put(artist, newArtist);
                 }
+                return x;
+            } catch (LastFmEntityNotFoundException exception) {
+                service.upsertArtistSad(x);
                 return x;
             } catch (LastFmException lastFmException) {
                 tobeRemoved.add(x.getArtist());
@@ -108,7 +104,11 @@ public class BillboardHoarder {
         Map<String, Long> mapId = foundArtists.stream().collect(Collectors.toMap(ScrobbledArtist::getArtist, ScrobbledArtist::getArtistId, (x, y) -> x));
 
         for (Iterator<TrackWithArtistId> iterator = toValidate.iterator(); iterator.hasNext(); ) {
+
             TrackWithArtistId x = iterator.next();
+            if (x.getArtistId() > 0) {
+                continue;
+            }
             Long aLong = mapId.get(x.getArtist());
             if (tobeRemoved.contains(x.getArtist())) {
                 iterator.remove();
