@@ -4,19 +4,25 @@ import com.google.common.collect.Sets;
 import com.neovisionaries.i18n.CountryCode;
 import core.Chuu;
 import core.apis.ExecutorsSingleton;
+import core.apis.discogs.DiscogsApi;
+import core.apis.discogs.DiscogsSingleton;
 import core.apis.last.ConcurrentLastFM;
-import core.apis.last.TopEntity;
+import core.apis.rym.RYMSearch;
 import core.apis.spotify.Spotify;
 import core.apis.spotify.SpotifySingleton;
-import core.commands.CommandUtil;
+import core.commands.Context;
+import core.commands.utils.CommandUtil;
 import core.commands.utils.PrivacyUtils;
 import core.exceptions.LastFmException;
+import core.services.tags.TagCleaner;
+import core.services.tags.TagStorer;
+import core.services.validators.TrackValidator;
 import dao.ChuuService;
 import dao.entities.*;
 import dao.exceptions.InstanceNotFoundException;
 import dao.musicbrainz.MusicBrainzService;
 import net.dv8tion.jda.api.EmbedBuilder;
-import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
+import org.apache.commons.lang3.StringUtils;
 
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
@@ -30,17 +36,31 @@ import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
-import static core.commands.AlbumRatings.getStartsFromScore;
+import static core.commands.rym.AlbumRatings.getStartsFromScore;
 
 public class NPModeBuilder {
     static final Map<NPMode, Integer> footerIndexes;
 
+    private static final EnumSet<NPMode> albumModes = EnumSet.of(NPMode.ALBUM_RYM,
+            NPMode.SERVER_ALBUM_RYM, NPMode.BOT_ALBUM_RYM, NPMode.ALBUM_CROWN, NPMode.ALBUM_RANK, NPMode.ALBUM_PLAYS, NPMode.GLOBAL_ALBUM_CROWN, NPMode.GLOBAL_ALBUM_RANK);
+    private static final EnumSet<NPMode> trackModes = EnumSet.of(
+            NPMode.ALBUM_RYM,
+            NPMode.SERVER_ALBUM_RYM,
+            NPMode.BOT_ALBUM_RYM,
+            NPMode.GLOBAL_TRACK_CROWN,
+            NPMode.GLOBAL_TRACK_RANK,
+            NPMode.POPULARITY,
+            NPMode.ALBUM_CROWN, NPMode.ALBUM_RANK, NPMode.ALBUM_PLAYS, NPMode.TRACK_CROWN, NPMode.TRACK_RANK);
+
     static {
         try {
             List<NPMode> tags = List.of(NPMode.TAGS,
+                    NPMode.EXTENDED_TAGS,
+                    NPMode.LOVED,
                     NPMode.ARTIST_PLAYS,
                     NPMode.ALBUM_PLAYS,
                     NPMode.SONG_PLAYS,
+                    NPMode.POPULARITY,
                     NPMode.CROWN,
                     NPMode.ARTIST_RANK,
                     NPMode.GLOBAL_CROWN,
@@ -49,6 +69,10 @@ public class NPModeBuilder {
                     NPMode.ALBUM_RANK,
                     NPMode.GLOBAL_ALBUM_CROWN,
                     NPMode.GLOBAL_ALBUM_RANK,
+                    NPMode.TRACK_RANK,
+                    NPMode.TRACK_CROWN,
+                    NPMode.GLOBAL_TRACK_CROWN,
+                    NPMode.GLOBAL_TRACK_RANK,
                     NPMode.LFM_LISTENERS,
                     NPMode.LFM_SCROBBLES,
                     NPMode.BOT_LISTENERS,
@@ -63,7 +87,10 @@ public class NPModeBuilder {
                     NPMode.SONG_DURATION,
                     NPMode.HIGHEST_STREAK,
                     NPMode.HIGHEST_SERVER_STREAK,
-                    NPMode.HIGHEST_BOT_STREAK);
+                    NPMode.HIGHEST_BOT_STREAK,
+                    NPMode.CURRENT_COMBO,
+                    NPMode.SCROBBLE_COUNT
+            );
 
             Map<NPMode, Integer> temp = new HashMap<>();
             for (int i = 0; i < tags.size(); i++) {
@@ -80,23 +107,25 @@ public class NPModeBuilder {
 
     private final Spotify spotifyApi;
     private final NowPlayingArtist np;
-    private final MessageReceivedEvent e;
+    private final Context e;
     private final String[] footerSpaces;
     private final long discordId;
     private final String userName;
     private final EnumSet<NPMode> npModes;
-    private final String lastFMName;
+    private final LastFMData lastFMName;
     private final EmbedBuilder embedBuilder;
     private final ScrobbledArtist scrobbledArtist;
-    private final Long albumId;
     private final ChuuService service;
     private final ConcurrentLastFM lastFM;
     private final String serverName;
     private final MusicBrainzService mb;
     private final List<String> outputList;
+    private final CompletableFuture<List<TrackWithArtistId>> comboData;
     private final ExecutorService executor;
+    private final DiscogsApi discogsApi;
+    private final RYMSearch rymSearch;
 
-    public NPModeBuilder(NowPlayingArtist np, MessageReceivedEvent e, String[] footerSpaces, long discordId, String userName, EnumSet<NPMode> npModes, String lastFMName, EmbedBuilder embedBuilder, ScrobbledArtist scrobbledArtist, Long albumId, ChuuService service, ConcurrentLastFM lastFM, String serverName, MusicBrainzService mb, List<String> outputList) {
+    public NPModeBuilder(NowPlayingArtist np, Context e, String[] footerSpaces, long discordId, String userName, EnumSet<NPMode> npModes, LastFMData lastFMName, EmbedBuilder embedBuilder, ScrobbledArtist scrobbledArtist, ChuuService service, ConcurrentLastFM lastFM, String serverName, MusicBrainzService mb, List<String> outputList, CompletableFuture<List<TrackWithArtistId>> data) {
         this.np = np;
         this.e = e;
         this.footerSpaces = footerSpaces;
@@ -106,14 +135,16 @@ public class NPModeBuilder {
         this.lastFMName = lastFMName;
         this.embedBuilder = embedBuilder;
         this.scrobbledArtist = scrobbledArtist;
-        this.albumId = albumId;
         this.service = service;
         this.lastFM = lastFM;
         this.serverName = serverName;
         this.mb = mb;
         this.outputList = outputList;
+        comboData = data;
         this.spotifyApi = SpotifySingleton.getInstance();
+        this.discogsApi = DiscogsSingleton.getInstanceUsingDoubleLocking();
         executor = ExecutorsSingleton.getInstance();
+        this.rymSearch = new RYMSearch();
     }
 
     public static int getSize() {
@@ -129,7 +160,6 @@ public class NPModeBuilder {
             }
         });
 
-
         AtomicBoolean whoKnowsLock = new AtomicBoolean(false);
         AtomicBoolean whoKnowsAlbumLock = new AtomicBoolean(false);
         AtomicBoolean globalWhoKnowsLock = new AtomicBoolean(false);
@@ -141,7 +171,29 @@ public class NPModeBuilder {
         AtomicBoolean mbLock = new AtomicBoolean(false);
         AtomicBoolean trackLock = new AtomicBoolean(false);
         AtomicBoolean embedLock = new AtomicBoolean(false);
+        AtomicBoolean tagsLock = new AtomicBoolean(false);
+        AtomicBoolean trackCrownsLock = new AtomicBoolean(false);
+        AtomicBoolean globalTrackCrownsLock = new AtomicBoolean(false);
+        Long preAlbumId = null;
+        if (npModes.stream().anyMatch(albumModes::contains)) {
+            try {
+                CommandUtil.validate(service, scrobbledArtist, lastFM, discogsApi, spotifyApi);
+                if (np.albumName() != null && !np.albumName().isBlank())
+                    preAlbumId = CommandUtil.albumvalidate(service, scrobbledArtist, lastFM, np.albumName()).id();
+            } catch (LastFmException ignored) {
+            }
+        }
+        Long albumId = preAlbumId;
 
+        Long preTrackId = null;
+        if (npModes.stream().anyMatch(trackModes::contains)) {
+            try {
+                if (np.songName() != null && !np.songName().isBlank())
+                    preTrackId = new TrackValidator(service, lastFM).validate(scrobbledArtist.getArtistId(), scrobbledArtist.getArtist(), np.songName()).getTrackId();
+            } catch (LastFmException ignored) {
+            }
+        }
+        Long trackId = preTrackId;
 
         for (
                 NPMode npMode : npModes) {
@@ -149,6 +201,63 @@ public class NPModeBuilder {
             assert index != null;
             long guildId = e.isFromGuild() ? e.getGuild().getIdLong() : -1L;
             switch (npMode) {
+                case LOVED:
+                    if (np.loved()) {
+                        footerSpaces[index] = "❤️";
+                    }
+                    break;
+                case CURRENT_COMBO:
+                    completableFutures.add(logger.apply(comboData.whenComplete((u, e) -> {
+                        if (e == null) {
+                            String previousArtist = np.artistName();
+                            int comboCounter = 1;
+                            boolean couldCheck = false;
+                            for (TrackWithArtistId datum : u) {
+                                if (datum.getArtist().equals(previousArtist)) {
+                                    comboCounter++;
+                                } else {
+                                    couldCheck = true;
+                                    break;
+                                }
+                            }
+                            if (!couldCheck) {
+                                comboCounter = service.getCurrentCombo(scrobbledArtist.getArtistId(), lastFMName.getName());
+                            }
+                            if (comboCounter > 1) {
+                                footerSpaces[index] =
+                                        String.format("%s is on a 🔥 of %d %s", userName, comboCounter, CommandUtil.singlePlural(comboCounter, "play", "plays"));
+                            }
+                        } else {
+                            try {
+                                StreakEntity combo = lastFM.getCombo(lastFMName);
+                                if (combo.artistCount() > 1) {
+                                    footerSpaces[footerIndexes.get(NPMode.CURRENT_COMBO)] =
+                                            String.format("%s's is on a 🔥 of %d %s", userName, combo.artistCount(), CommandUtil.singlePlural(combo.artistCount(), "play", "plays"));
+                                }
+                            } catch (LastFmException exception) {
+                                exception.printStackTrace();
+                            }
+                        }
+                    })));
+                    break;
+                case SCROBBLE_COUNT:
+                    completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
+                        int playCount = new UserInfoService(service).getUserInfo(lastFMName).getPlayCount();
+                        footerSpaces[index] =
+                                "%d total scrobbles".formatted(playCount);
+                    })));
+                    break;
+                case POPULARITY:
+                    if (trackId != null) {
+                        completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
+                            ScrobbledTrack trackInfo = service.getTrackInfo(lastFMName.getName(), trackId);
+                            if (trackInfo != null && trackInfo.getPopularity() != 0) {
+                                footerSpaces[index] =
+                                        "%d%% popular".formatted(trackInfo.getPopularity());
+                            }
+                        })));
+                    }
+                    break;
                 case NORMAL:
                 case ARTIST_PIC:
                 case RANDOM:
@@ -156,48 +265,74 @@ public class NPModeBuilder {
                     break;
                 case PREVIOUS:
                 case SPOTIFY_LINK:
-                    if (embedLock.compareAndSet(false, true)) {
+                case RYM_LINK:
+                    if (!embedLock.compareAndSet(false, true)) {
                         break;
                     }
                     completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
                         if (npModes.contains(NPMode.PREVIOUS)) {
                             try {
+                                NowPlayingArtist recent = lastFM.getRecent(lastFMName, 2).get(1);
+                                String album = CommandUtil.escapeMarkdown(recent.albumName());
+                                String artist = CommandUtil.escapeMarkdown(recent.artistName());
+                                String song = CommandUtil.escapeMarkdown(recent.songName());
+                                if (npModes.contains(NPMode.SPOTIFY_LINK)) {
+                                    String uri = spotifyApi.searchItems(recent.songName(), recent.artistName(), recent.albumName());
+                                    if (!uri.isBlank())
+                                        song = "<:spochuu:776799107737976863>\t %s [%s](%s)".formatted(EmbedBuilder.ZERO_WIDTH_SPACE, song, uri);
+                                }
+                                if (npModes.contains(NPMode.RYM_LINK)) {
+                                    String url = rymSearch.searchUrl(recent.artistName(), recent.albumName());
+                                    album = "\t<:rym:820111349690531850> %s [%s](%s)".formatted(EmbedBuilder.ZERO_WIDTH_SPACE, album, url);
+                                }
 
-                                StringBuilder t = new StringBuilder();
-                                NowPlayingArtist np = lastFM.getRecent(lastFMName, 2).get(1);
-                                t.append("**").append(CommandUtil.cleanMarkdownCharacter(np.getArtistName()))
-                                        .append("** | ").append(CommandUtil.cleanMarkdownCharacter(np.getAlbumName())).append("\n");
-
-                                embedBuilder.getDescriptionBuilder().append("\n**Previous:** ***").append(np.getSongName()).append("***\n").append(t.toString());
+                                String t = "**" + artist +
+                                           "** | " + album + "\n";
+                                embedBuilder.getDescriptionBuilder().append("\n**Previous:** ***").append(song).append("***\n").append(t);
 
                             } catch (LastFmException ignored) {
                             }
                         }
                         if (npModes.contains(NPMode.SPOTIFY_LINK)) {
-                            String uri = spotifyApi.searchItems(np.getSongName(), np.getArtistName(), np.getAlbumName());
+                            String uri = spotifyApi.searchItems(np.songName(), np.artistName(), np.albumName());
                             if (!uri.isBlank())
-                                embedBuilder.getDescriptionBuilder().append("\n***__[Listen on Spotify](").append(uri).append(")__***");
+                                embedBuilder.setTitle("\t<:spochuu:776799107737976863> " + embedBuilder.build().getTitle(), uri);
+                        }
+                        if (npModes.contains(NPMode.RYM_LINK) && !StringUtils.isEmpty(np.albumName())) {
+                            String url = rymSearch.searchUrl(np.artistName(), np.albumName());
+
+                            String a = "**" + CommandUtil.escapeMarkdown(np.artistName()) +
+                                       "** | " + CommandUtil.escapeMarkdown(np.albumName());
+
+                            String b = "**%s** | \t<:rym:820111349690531850> %s [%s](%s)".formatted(CommandUtil.escapeMarkdown(np.artistName()), EmbedBuilder.ZERO_WIDTH_SPACE, CommandUtil.escapeMarkdown(np.albumName()), url);
+                            embedBuilder.setDescription(StringUtils.replaceOnceIgnoreCase(embedBuilder.build().getDescription(), a, b));
                         }
 
                     })));
                     break;
                 case TAGS:
+                case EXTENDED_TAGS:
+                    if (!tagsLock.compareAndSet(false, true)) {
+                        break;
+                    }
                     completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
                         try {
-                            Set<String> tags = new HashSet<>(5);
-                            tags.addAll(lastFM.getTrackTags(1, TopEntity.TRACK, np.getArtistName(), np.getSongName()));
-                            if (tags.size() < 5) {
-                                tags.addAll(lastFM.getTrackTags(5, TopEntity.ARTIST, np.getArtistName(), null));
+                            boolean extended = npModes.contains(NPMode.EXTENDED_TAGS);
+                            int limit = extended ? 12 : 5;
+                            Set<String> tags = new LinkedHashSet<>();
+                            if (lastFMName.getSession() != null && lastFMName.useOwnTags()) {
+                                tags.addAll(lastFM.getUserArtistTags(limit, scrobbledArtist.getArtist(), lastFMName, lastFMName.getSession()));
                             }
-                            if (!tags.isEmpty()) {
-                                executor.submit(new TagArtistService(service, lastFM, new ArrayList<>(tags), new ArtistInfo(null, np.getArtistName())));
-                                if (tags.size() > 5) {
-                                    tags = tags.stream().limit(5).collect(Collectors.toSet());
-                                }
-                                String tagsField = EmbedBuilder.ZERO_WIDTH_SPACE + " • " + String.join(" - ", tags);
-                                tagsField += '\n';
-                                footerSpaces[index] = tagsField;
+                            if (tags.size() < limit) {
+                                tags.addAll(new HashSet<>(new TagStorer(service, lastFM, executor, np).findTags(limit)));
                             }
+                            var filteredTags = new TagCleaner(service).cleanTags(tags);
+                            if (filteredTags.isEmpty()) {
+                                return;
+                            }
+                            String tagsField = EmbedBuilder.ZERO_WIDTH_SPACE + " • " + String.join(" - ", filteredTags);
+                            tagsField += '\n';
+                            footerSpaces[index] = tagsField;
                         } catch (LastFmException ignored) {
                         }
                     })));
@@ -214,10 +349,10 @@ public class NPModeBuilder {
                             if (!returnNowPlayings.isEmpty()) {
 
                                 ReturnNowPlaying returnNowPlaying = returnNowPlayings.get(0);
-                                String userString = CommandUtil.getUserInfoNotStripped(e, returnNowPlaying.getDiscordId()).getUsername();
+                                String userString = CommandUtil.getUserInfoUnescaped(e, returnNowPlaying.getDiscordId()).username();
                                 if (npModes.contains(NPMode.CROWN))
                                     footerSpaces[footerIndexes.get(NPMode.CROWN)] =
-                                            "\uD83D\uDC51 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
+                                            "👑 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
                                 if (npModes.contains(NPMode.ARTIST_RANK)) {
                                     for (int i = 0; i < returnNowPlayings.size(); i++) {
                                         ReturnNowPlaying searching = returnNowPlayings.get(i);
@@ -235,7 +370,7 @@ public class NPModeBuilder {
                     break;
                 case ALBUM_CROWN:
                 case ALBUM_RANK:
-                    if (e.isFromGuild() && albumId != null) {
+                    if (e.isFromGuild() && preAlbumId != null) {
                         if (!whoKnowsAlbumLock.compareAndSet(false, true)) {
                             break;
                         }
@@ -245,10 +380,10 @@ public class NPModeBuilder {
                             if (!returnNowPlayings.isEmpty()) {
 
                                 ReturnNowPlaying returnNowPlaying = returnNowPlayings.get(0);
-                                String userString = CommandUtil.getUserInfoNotStripped(e, returnNowPlaying.getDiscordId()).getUsername();
+                                String userString = CommandUtil.getUserInfoUnescaped(e, returnNowPlaying.getDiscordId()).username();
                                 if (npModes.contains(NPMode.ALBUM_CROWN))
                                     footerSpaces[footerIndexes.get(NPMode.ALBUM_CROWN)] =
-                                            "Album \uD83D\uDC51 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
+                                            "Album 👑 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
                                 if (npModes.contains(NPMode.ALBUM_RANK)) {
                                     for (int i = 0; i < returnNowPlayings.size(); i++) {
                                         ReturnNowPlaying searching = returnNowPlayings.get(i);
@@ -256,6 +391,37 @@ public class NPModeBuilder {
                                             footerSpaces[footerIndexes.get(NPMode.ALBUM_RANK)] = serverName + " Album Rank: " + (i + 1) + CommandUtil.getDayNumberSuffix(i + 1) + "/" + returnNowPlayings.size();
                                             if (npModes.contains(NPMode.ALBUM_CROWN))
                                                 addNewLineToPrevious(footerIndexes.get(NPMode.ALBUM_CROWN));
+                                            break;
+                                        }
+
+                                    }
+                                }
+                            }
+                        })));
+                    }
+                case TRACK_CROWN:
+                case TRACK_RANK:
+                    if (e.isFromGuild() && trackId != null) {
+                        if (!trackCrownsLock.compareAndSet(false, true)) {
+                            break;
+                        }
+                        completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
+                            WrapperReturnNowPlaying wrapperReturnNowPlaying = service.getWhoKnowsTrack(10_000, trackId, guildId);
+                            List<ReturnNowPlaying> returnNowPlayings = wrapperReturnNowPlaying.getReturnNowPlayings();
+                            if (!returnNowPlayings.isEmpty()) {
+
+                                ReturnNowPlaying returnNowPlaying = returnNowPlayings.get(0);
+                                String userString = CommandUtil.getUserInfoUnescaped(e, returnNowPlaying.getDiscordId()).username();
+                                if (npModes.contains(NPMode.TRACK_CROWN))
+                                    footerSpaces[footerIndexes.get(NPMode.TRACK_CROWN)] =
+                                            "Track 👑 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
+                                if (npModes.contains(NPMode.TRACK_RANK)) {
+                                    for (int i = 0; i < returnNowPlayings.size(); i++) {
+                                        ReturnNowPlaying searching = returnNowPlayings.get(i);
+                                        if (searching.getDiscordId() == discordId) {
+                                            footerSpaces[footerIndexes.get(NPMode.TRACK_RANK)] = serverName + " Track Rank: " + (i + 1) + CommandUtil.getDayNumberSuffix(i + 1) + "/" + returnNowPlayings.size();
+                                            if (npModes.contains(NPMode.TRACK_CROWN))
+                                                addNewLineToPrevious(footerIndexes.get(NPMode.TRACK_CROWN));
                                             break;
                                         }
 
@@ -296,14 +462,14 @@ public class NPModeBuilder {
                     completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
                         try {
                             ArtistSummary summary = lastFM.getArtistSummary(scrobbledArtist.getArtist(), lastFMName);
-                            long artistFrequencies = summary.getListeners();
-                            long serverArtistPlays = summary.getPlaycount();
+                            long artistFrequencies = summary.listeners();
+                            long serverArtistPlays = summary.playcount();
                             if (npModes.contains(NPMode.LFM_LISTENERS))
                                 footerSpaces[footerIndexes.get(NPMode.LFM_LISTENERS)] =
                                         (String.format("%d %s listeners", artistFrequencies, "Last.fm"));
                             if (npModes.contains(NPMode.ARTIST_PLAYS))
                                 footerSpaces[footerIndexes.get(NPMode.ARTIST_PLAYS)] =
-                                        (String.format("%d artist %s", summary.getUserPlayCount(), CommandUtil.singlePlural(summary.getUserPlayCount(), "play", "plays")));
+                                        (String.format("%d artist %s", summary.userPlayCount(), CommandUtil.singlePlural(summary.userPlayCount(), "play", "plays")));
                             if (npModes.contains(NPMode.LFM_SCROBBLES)) {
                                 footerSpaces[footerIndexes.get(NPMode.LFM_SCROBBLES)] =
                                         (String.format("%d %s plays", serverArtistPlays, "Last.fm"));
@@ -320,19 +486,20 @@ public class NPModeBuilder {
                 case ALBUM_RYM:
                 case SERVER_ALBUM_RYM:
                 case BOT_ALBUM_RYM:
+
                     if (!ratingLock.compareAndSet(false, true)) {
                         break;
                     }
-                    if (albumId != null) {
+                    if (preAlbumId != null) {
                         completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
                             NumberFormat average = new DecimalFormat("#0.##");
 
                             if ((npModes.contains(NPMode.SERVER_ALBUM_RYM) || npModes.contains(NPMode.BOT_ALBUM_RYM) || npModes.contains(NPMode.ALBUM_RYM) && (npModes.contains(NPMode.SERVER_ALBUM_RYM) || npModes.contains(NPMode.BOT_ALBUM_RYM)))) {
 
-                                AlbumRatings albumRatings = service.getRatingsByName(e.isFromGuild() ? guildId : -1L, np.getAlbumName(), scrobbledArtist.getArtistId());
-                                List<Rating> userRatings = albumRatings.getUserRatings();
+                                AlbumRatings albumRatings = service.getRatingsByName(e.isFromGuild() ? guildId : -1L, np.albumName(), scrobbledArtist.getArtistId());
+                                List<Rating> userRatings = albumRatings.userRatings();
                                 if (npModes.contains(NPMode.SERVER_ALBUM_RYM)) {
-                                    List<Rating> serverList = userRatings.stream().filter(Rating::isSameGuild).collect(Collectors.toList());
+                                    List<Rating> serverList = userRatings.stream().filter(Rating::isSameGuild).toList();
                                     if (!serverList.isEmpty()) {
                                         footerSpaces[footerIndexes.get(NPMode.SERVER_ALBUM_RYM)] =
                                                 (String.format("%s Average: %s | Ratings: %d", serverName, average.format(serverList.stream().mapToDouble(rating -> rating.getRating() / 2f).average().orElse(0)), serverList.size()));
@@ -376,32 +543,9 @@ public class NPModeBuilder {
 
 
                             if (npModes.contains(NPMode.GLOBAL_CROWN)) {
-                                String holder = null;
-                                try {
-                                    LastFMData lastFMData = service.findLastFMData(globalArtistRanking.get(0).getDiscordId());
-
-                                    if (EnumSet.of(PrivacyMode.LAST_NAME, PrivacyMode.TAG, PrivacyMode.DISCORD_NAME).contains(lastFMData.getPrivacyMode())) {
-
-                                        switch (lastFMData.getPrivacyMode()) {
-                                            case DISCORD_NAME:
-                                                holder = CommandUtil.getUserInfoNotStripped(e, returnNowPlaying.getDiscordId()).getUsername();
-                                                break;
-                                            case TAG:
-                                                holder = e.getJDA().retrieveUserById(lastFMData.getDiscordId()).complete().getAsTag();
-                                                break;
-                                            case LAST_NAME:
-                                                holder = lastFMData.getName() + " (lastfm)";
-                                                break;
-                                            default:
-                                                holder =
-                                                        "Private User #1";
-                                        }
-                                    } else holder = "Private User #1";
-                                } catch (InstanceNotFoundException exception) {
-                                    exception.printStackTrace();
-                                }
+                                String holder = getPrivateString(returnNowPlaying.getDiscordId());
                                 footerSpaces[footerIndexes.get(NPMode.GLOBAL_CROWN)] =
-                                        "Global \uD83D\uDC51 " + returnNowPlaying.getPlaycount() + " (" + holder + ")";
+                                        "Global 👑 " + returnNowPlaying.getPlaycount() + " (" + holder + ")";
                             }
                             if (npModes.contains(NPMode.GLOBAL_RANK)) {
                                 Optional<GlobalCrown> yourPosition = globalArtistRanking.stream().filter(x -> x.getDiscordId() == discordId).findFirst();
@@ -421,20 +565,20 @@ public class NPModeBuilder {
                     break;
                 case GLOBAL_ALBUM_CROWN:
                 case GLOBAL_ALBUM_RANK:
-                    if (albumId != null) {
+                    if (preAlbumId != null) {
                         if (!globalWhoKnowsAlbumLock.compareAndSet(false, true)) {
                             break;
                         }
                         completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
-                            WrapperReturnNowPlaying wrapperReturnNowPlaying = service.getGlobalWhoKnowsAlbum(10_000, albumId, discordId, false);
+                            WrapperReturnNowPlaying wrapperReturnNowPlaying = service.getGlobalWhoKnowsAlbum(10_000, albumId, discordId, false, false);
                             List<ReturnNowPlaying> returnNowPlayings = wrapperReturnNowPlaying.getReturnNowPlayings();
                             if (!returnNowPlayings.isEmpty()) {
 
                                 ReturnNowPlaying returnNowPlaying = returnNowPlayings.get(0);
-                                String userString = CommandUtil.getUserInfoNotStripped(e, returnNowPlaying.getDiscordId()).getUsername();
+                                String holder = getPrivateString(returnNowPlaying.getDiscordId());
                                 if (npModes.contains(NPMode.GLOBAL_ALBUM_CROWN))
                                     footerSpaces[footerIndexes.get(NPMode.GLOBAL_ALBUM_CROWN)] =
-                                            "Global Album \uD83D\uDC51 " + returnNowPlaying.getPlayNumber() + " (" + userString + ")";
+                                            "Global Album 👑 " + returnNowPlaying.getPlayNumber() + " (" + holder + ")";
                                 if (npModes.contains(NPMode.GLOBAL_ALBUM_RANK)) {
                                     for (int i = 0; i < returnNowPlayings.size(); i++) {
                                         ReturnNowPlaying searching = returnNowPlayings.get(i);
@@ -442,6 +586,37 @@ public class NPModeBuilder {
                                             footerSpaces[footerIndexes.get(NPMode.GLOBAL_ALBUM_RANK)] = "Global Album Rank: " + (i + 1) + CommandUtil.getDayNumberSuffix(i + 1) + "/" + returnNowPlayings.size();
                                             if (npModes.contains(NPMode.GLOBAL_ALBUM_RANK)) {
                                                 previousNewLinesToAdd.add(footerIndexes.get(NPMode.GLOBAL_ALBUM_CROWN));
+                                            }
+                                            break;
+                                        }
+                                    }
+                                }
+                            }
+                        })));
+                    }
+                    break;
+                case GLOBAL_TRACK_CROWN:
+                case GLOBAL_TRACK_RANK:
+                    if (trackId != null) {
+                        if (!globalTrackCrownsLock.compareAndSet(false, true)) {
+                            break;
+                        }
+                        completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
+                            WrapperReturnNowPlaying wrapperReturnNowPlaying = service.getGlobalWhoKnowsTrack(10_000, trackId, discordId, false, false);
+                            List<ReturnNowPlaying> returnNowPlayings = wrapperReturnNowPlaying.getReturnNowPlayings();
+                            if (!returnNowPlayings.isEmpty()) {
+                                ReturnNowPlaying returnNowPlaying = returnNowPlayings.get(0);
+                                String holder = getPrivateString(returnNowPlaying.getDiscordId());
+                                if (npModes.contains(NPMode.GLOBAL_TRACK_CROWN))
+                                    footerSpaces[footerIndexes.get(NPMode.GLOBAL_TRACK_CROWN)] =
+                                            "Global Track 👑 " + returnNowPlaying.getPlayNumber() + " (" + holder + ")";
+                                if (npModes.contains(NPMode.GLOBAL_TRACK_RANK)) {
+                                    for (int i = 0; i < returnNowPlayings.size(); i++) {
+                                        ReturnNowPlaying searching = returnNowPlayings.get(i);
+                                        if (searching.getDiscordId() == discordId) {
+                                            footerSpaces[footerIndexes.get(NPMode.GLOBAL_TRACK_RANK)] = "Global Track Rank: " + (i + 1) + CommandUtil.getDayNumberSuffix(i + 1) + "/" + returnNowPlayings.size();
+                                            if (npModes.contains(NPMode.GLOBAL_TRACK_RANK)) {
+                                                previousNewLinesToAdd.add(footerIndexes.get(NPMode.GLOBAL_TRACK_CROWN));
                                             }
                                             break;
                                         }
@@ -477,33 +652,34 @@ public class NPModeBuilder {
                         break;
                     }
                     completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
-                        ArtistMusicBrainzDetails artistDetails = mb.getArtistDetails(new ArtistInfo(null, np.getArtistName(), np.getArtistMbid()));
-                        if (npModes.contains(NPMode.GENDER) && artistDetails != null && artistDetails.getGender() != null) {
+                        ArtistMusicBrainzDetails artistDetails = mb.getArtistDetails(new ArtistInfo(null, np.artistName(), np.artistMbid()));
+                        if (npModes.contains(NPMode.GENDER) && artistDetails != null && artistDetails.gender() != null) {
                             footerSpaces[footerIndexes.get(NPMode.GENDER)] =
-                                    artistDetails.getGender();
+                                    artistDetails.gender();
                         }
-                        if (npModes.contains(NPMode.COUNTRY) && artistDetails != null && artistDetails.getCountryCode() != null) {
+                        if (npModes.contains(NPMode.COUNTRY) && artistDetails != null && artistDetails.countryCode() != null) {
                             footerSpaces[footerIndexes.get(NPMode.BOT_SCROBBLES)] =
-                                    CountryCode.getByAlpha2Code(artistDetails.getCountryCode()).getName();
+                                    CountryCode.getByAlpha2Code(artistDetails.countryCode()).getName();
                         }
                     })));
 
                     break;
                 case ALBUM_PLAYS:
-                    if (albumId != null) {
-                        break;
-                    }
-                    completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
-                        try {
-                            AlbumUserPlays playsAlbumArtist = lastFM.getPlaysAlbumArtist(lastFMName, scrobbledArtist.getArtist(), np.getAlbumName());
-                            int plays = playsAlbumArtist.getPlays();
-                            if (plays != 0) {
-                                footerSpaces[footerIndexes.get(NPMode.ALBUM_PLAYS)] =
-                                        (String.format("%d album %s", plays, CommandUtil.singlePlural(plays, "play", "plays")));
+
+                    if (preAlbumId != null) {
+
+                        completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
+                            try {
+                                AlbumUserPlays playsAlbumArtist = lastFM.getPlaysAlbumArtist(lastFMName, scrobbledArtist.getArtist(), np.albumName());
+                                int plays = playsAlbumArtist.getPlays();
+                                if (plays != 0) {
+                                    footerSpaces[index] =
+                                            (String.format("%d album %s", plays, CommandUtil.singlePlural(plays, "play", "plays")));
+                                }
+                            } catch (LastFmException ignored) {
                             }
-                        } catch (LastFmException ignored) {
-                        }
-                    })));
+                        })));
+                    }
                     break;
                 case SONG_PLAYS:
                 case SONG_DURATION:
@@ -513,7 +689,7 @@ public class NPModeBuilder {
                     }
                     completableFutures.add(logger.apply(CompletableFuture.runAsync(() -> {
                         try {
-                            Track trackInfo = lastFM.getTrackInfo(lastFMName, scrobbledArtist.getArtist(), np.getSongName());
+                            Track trackInfo = lastFM.getTrackInfo(lastFMName, scrobbledArtist.getArtist(), np.songName());
                             int plays = trackInfo.getPlays();
                             if (plays != 0) {
                                 if (npModes.contains(NPMode.SONG_PLAYS))
@@ -534,7 +710,7 @@ public class NPModeBuilder {
                         if (!userArtistTopStreaks.isEmpty()) {
                             StreakEntity globalStreakEntities = userArtistTopStreaks.get(0);
                             footerSpaces[footerIndexes.get(NPMode.HIGHEST_STREAK)] =
-                                    (String.format("%s \uD83D\uDD25 %d %s", userName, globalStreakEntities.getaCounter(), CommandUtil.singlePlural(globalStreakEntities.getaCounter(), "play", "plays")));
+                                    (String.format("%s 🔥 %d %s", userName, globalStreakEntities.artistCount(), CommandUtil.singlePlural(globalStreakEntities.artistCount(), "play", "plays")));
                         }
                     })));
                     break;
@@ -545,10 +721,11 @@ public class NPModeBuilder {
                             if (!artistTopStreaks.isEmpty()) {
                                 Consumer<GlobalStreakEntities> consumer = PrivacyUtils.consumer.apply(e, new AtomicInteger(0), x -> true);
                                 GlobalStreakEntities globalStreakEntities = artistTopStreaks.get(0);
+                                PrivacyUtils.PrivateString publicString = PrivacyUtils.getPublicString(globalStreakEntities.getPrivacyMode(), globalStreakEntities.getDiscordId(), globalStreakEntities.getLastfmId(), new AtomicInteger(0), e, Set.of(e.getAuthor().getIdLong()));
                                 globalStreakEntities.setDisplayer(consumer);
                                 String name = globalStreakEntities.getName().replace("*", "").substring(2).trim();
-                                footerSpaces[footerIndexes.get(NPMode.HIGHEST_SERVER_STREAK)] =
-                                        (String.format("%s \uD83D\uDD25 %d %s (%s)", e.getGuild().getName(), globalStreakEntities.getaCounter(), CommandUtil.singlePlural(globalStreakEntities.getaCounter(), "play", "plays"), name));
+                                footerSpaces[index] =
+                                        (String.format("%s 🔥 %d %s (%s)", e.getGuild().getName(), globalStreakEntities.artistCount(), CommandUtil.singlePlural(globalStreakEntities.artistCount(), "play", "plays"), name));
                             }
                         })));
                     }
@@ -561,8 +738,8 @@ public class NPModeBuilder {
                             GlobalStreakEntities globalStreakEntities = artistTopStreaks.get(0);
                             globalStreakEntities.setDisplayer(consumer);
                             String name = globalStreakEntities.getName().replace("*", "").substring(2).trim();
-                            footerSpaces[footerIndexes.get(NPMode.HIGHEST_BOT_STREAK)] =
-                                    (String.format("Global \uD83D\uDD25 %d %s (%s)", globalStreakEntities.getaCounter(), CommandUtil.singlePlural(globalStreakEntities.getaCounter(), "play", "plays"), name));
+                            footerSpaces[index] =
+                                    (String.format("Global 🔥 %d %s (%s)", globalStreakEntities.artistCount(), CommandUtil.singlePlural(globalStreakEntities.artistCount(), "play", "plays"), name));
                         }
                     })));
                     break;
@@ -576,36 +753,37 @@ public class NPModeBuilder {
 
                 {
                     previousNewLinesToAdd.forEach(this::addNewLineToPrevious);
-                    List<String> collect = Arrays.stream(footerSpaces).filter(Objects::nonNull).collect(Collectors.toList());
+                    List<String> footerLines = Arrays.stream(footerSpaces).filter(Objects::nonNull).collect(Collectors.toCollection(ArrayList::new));
 
-                    for (int i = 0; i < collect.size(); i++) {
-                        if (npModes.contains(NPMode.TAGS) && (i == 0)) {
+                    for (int i = 0; i < footerLines.size(); i++) {
+                        if (npModes.contains(NPMode.TAGS) || npModes.contains(NPMode.EXTENDED_TAGS) && (i == 0)) {
                             continue;
                         }
                         Predicate<Integer> tester = (npModes.contains(NPMode.TAGS) ? (j) -> j % 2 != 0 : (j) -> j % 2 == 0);
-                        String current = collect.get(i);
+                        String current = footerLines.get(i);
                         if (tester.test(i)) {
                             if (current.endsWith("\n")) {
-                                collect.set(i, current.substring(0, current.length() - 1));
+                                footerLines.set(i, current.substring(0, current.length() - 1));
                             }
                         } else {
                             if (!current.endsWith("\n")) {
-                                collect.set(i, current + "\n");
+                                footerLines.set(i, current + "\n");
                             }
                         }
                     }
-                    outputList.addAll(collect);
+                    outputList.addAll(footerLines);
                     EnumSet<NPMode> checker = EnumSet.copyOf(this.npModes);
                     checker.remove(NPMode.TAGS);
+                    checker.remove(NPMode.EXTENDED_TAGS);
                     if (
 
                             Sets.difference(checker, EnumSet.of(NPMode.HIGHEST_BOT_STREAK, NPMode.HIGHEST_SERVER_STREAK, NPMode.HIGHEST_STREAK)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.CROWN, NPMode.GLOBAL_CROWN)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.BOT_LISTENERS, NPMode.BOT_SCROBBLES)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.SERVER_LISTENERS, NPMode.SERVER_SCROBBLES)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.LFM_LISTENERS, NPMode.LFM_SCROBBLES)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.CROWN, NPMode.ALBUM_CROWN, NPMode.GLOBAL_CROWN, NPMode.GLOBAL_ALBUM_CROWN)).isEmpty()
-                                    || Sets.difference(checker, EnumSet.of(NPMode.SONG_DURATION, NPMode.SONG_PLAYS)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.CROWN, NPMode.GLOBAL_CROWN)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.BOT_LISTENERS, NPMode.BOT_SCROBBLES)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.SERVER_LISTENERS, NPMode.SERVER_SCROBBLES)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.LFM_LISTENERS, NPMode.LFM_SCROBBLES)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.CROWN, NPMode.ALBUM_CROWN, NPMode.GLOBAL_CROWN, NPMode.GLOBAL_ALBUM_CROWN)).isEmpty()
+                            || Sets.difference(checker, EnumSet.of(NPMode.SONG_DURATION, NPMode.SONG_PLAYS)).isEmpty()
 
 
                     ) {
@@ -630,5 +808,25 @@ public class NPModeBuilder {
                 break;
             }
         }
+    }
+
+    private String getPrivateString(long discordId) {
+        String holder;
+        try {
+            LastFMData lastFMData = service.findLastFMData(discordId);
+
+            if (EnumSet.of(PrivacyMode.LAST_NAME, PrivacyMode.TAG, PrivacyMode.DISCORD_NAME).contains(lastFMData.getPrivacyMode())) {
+
+                holder = switch (lastFMData.getPrivacyMode()) {
+                    case DISCORD_NAME -> CommandUtil.getUserInfoUnescaped(e, discordId).username();
+                    case TAG -> e.getJDA().retrieveUserById(lastFMData.getDiscordId()).complete().getAsTag();
+                    case LAST_NAME -> lastFMData.getName() + " (lastfm)";
+                    default -> "Private User #1";
+                };
+            } else holder = "Private User #1";
+        } catch (InstanceNotFoundException exception) {
+            holder = "Private User #1";
+        }
+        return holder;
     }
 }
